--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,10 +11,10 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <item name="actionBarStyle">@style/MyActionBar</item>
+<!--        <item name="actionBarStyle">@style/MyActionBar</item>-->
     </style>
 
-    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">#fcfbff</item>
-    </style>
+<!--    <style name="MyActionBar" parent="Theme.Supervisor">-->
+<!--        <item name="android:background">#fcfbff</item>-->
+<!--    </style>-->
 </resources>
