--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Supervisor" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Supervisor" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/pinky</item>
-        <item name="colorPrimaryVariant">@color/back</item>
+        <item name="colorPrimary">@color/surface</item>
+        <item name="colorPrimaryVariant">@color/status</item>
+        <item name="android:colorForeground">@color/white</item>
+<!--        <item name="colorOnSurface">#</item>-->
         <item name="colorOnPrimary">@color/back</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -14,7 +16,8 @@
 <!--        <item name="actionBarStyle">@style/MyActionBar</item>-->
     </style>
 
-<!--    <style name="MyActionBar" parent="Theme.Supervisor">-->
-<!--        <item name="android:background">#fcfbff</item>-->
+<!--    <style name="MyActionBar" parent="Theme.MaterialComponents.Light">-->
+<!--        <item name="android:textColor">@color/white</item>-->
+<!--        <item name="title">Link Patrol</item>-->
 <!--    </style>-->
 </resources>
