--- a/app/src/main/res/layout/create_schedule_fragment.xml
+++ b/app/src/main/res/layout/create_schedule_fragment.xml
@@ -13,7 +13,11 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="1dp"
+        android:background="@android:drawable/spinner_background"
         android:minHeight="48dp"
+        android:spinnerMode="dropdown"
+        android:textAlignment="center"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
